File Manager fix + updates
File Manager scrollbar fix + updates

--- a/upload/admin/view/stylesheet/filemanager.css
+++ b/upload/admin/view/stylesheet/filemanager.css
@@ -35,7 +35,6 @@ img {
 	width: 72%;
 	height: 285px;
 	overflow: auto;
-	text-align: center;
 }
 #column-right div {
 	text-align: left;
