--- a/upload/admin/view/stylesheet/filemanager_full.css
+++ b/upload/admin/view/stylesheet/filemanager_full.css
@@ -36,6 +36,7 @@
 	height: 367px;
 	margin-bottom: 9px;
 	padding-top: 5px;
+	overflow: auto;
 }
 #column-right {
 	background: #FFF;
